fixed icon alignment. Updated to 0.1.19

--- a/src/components/fsfilter/fsfilter.component.scss
+++ b/src/components/fsfilter/fsfilter.component.scss
@@ -80,7 +80,6 @@
           color: rgba(0, 0, 0, 0.54);
           background: #fff;
           height: 22px;
-          margin-bottom: 5px;
 
           i {
             transform: scale(.9);
